Добавил роли Identity. Настроил фильтры на контроллеры для админа и експерта.

--- a/Queue/Queue/Queue.csproj
+++ b/Queue/Queue/Queue.csproj
@@ -153,15 +153,18 @@
     <Compile Include="Controllers\ExpertController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Identity\ApplicationUser.cs" />
     <Compile Include="Models\Identity\ApplicationUserManager.cs" />
+    <Compile Include="Models\Identity\IdentityRole.cs" />
     <Compile Include="Models\Identity\IdentityViewModel\EditModel.cs" />
     <Compile Include="Models\Identity\IdentityDbContext.cs" />
     <Compile Include="Models\Identity\IdentityViewModel\LoginModel.cs" />
     <Compile Include="Models\Identity\IdentityViewModel\RegisterModel.cs" />
+    <Compile Include="Models\Identity\IdentityViewModel\RoleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -203,6 +206,9 @@
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Expert\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Roles\Index.cshtml" />
+    <Content Include="Views\Roles\Create.cshtml" />
+    <Content Include="Views\Roles\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
