добавил модели для двух таблиц базы. Вывод таблицы с запросами в таблицу эксперту и админу (репозиторий пока не реализован)

--- a/Queue/Queue/Web.config
+++ b/Queue/Queue/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <connectionStrings>
     <add name="QueueDb" providerName="System.Data.SqlClient"
-      connectionString="Data Source=MATVIK-PC\SQLEXPRESS;Initial Catalog=Queue;Integrated Security=True"/>
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Queue;Integrated Security=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
