--- a/Queue/Queue/Queue.csproj
+++ b/Queue/Queue/Queue.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ExpertView.cs" />
     <Compile Include="Models\Identity\ApplicationUser.cs" />
     <Compile Include="Models\Identity\ApplicationUserManager.cs" />
     <Compile Include="Models\Identity\IdentityRole.cs" />
@@ -166,6 +167,7 @@
     <Compile Include="Models\Identity\IdentityViewModel\RegisterModel.cs" />
     <Compile Include="Models\Identity\IdentityViewModel\RoleModel.cs" />
     <Compile Include="Models\Interface\IRepository.cs" />
+    <Compile Include="Models\ProcessingView.cs" />
     <Compile Include="Models\QueryView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
