--- a/Queue/Queue/packages.config
+++ b/Queue/Queue/packages.config
@@ -11,6 +11,10 @@
   <package id="Microsoft.AspNet.Mvc.ru" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
@@ -22,7 +26,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
