--- a/Queue/Queue/Queue.csproj
+++ b/Queue/Queue/Queue.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Models\Identity\IdentityViewModel\LoginModel.cs" />
     <Compile Include="Models\Identity\IdentityViewModel\RegisterModel.cs" />
     <Compile Include="Models\Identity\IdentityViewModel\RoleModel.cs" />
+    <Compile Include="Models\Interface\IAdminRepository.cs" />
     <Compile Include="Models\Interface\IClientRepository.cs" />
     <Compile Include="Models\Interface\IExpertRepository.cs" />
     <Compile Include="Models\Interface\IRepository.cs" />
@@ -181,6 +182,7 @@
     <Compile Include="Models\ProcessingView.cs" />
     <Compile Include="Models\QueryView.cs" />
     <Compile Include="Models\QueueView.cs" />
+    <Compile Include="Models\Repository\AdminRepoTest.cs" />
     <Compile Include="Models\Repository\ClientRepoTest.cs" />
     <Compile Include="Models\Repository\ExpertRepoTest.cs" />
     <Compile Include="Models\Repository\ViewListRepoTest.cs" />
@@ -237,6 +239,9 @@
     <Content Include="Views\Client\QueryPartial.cshtml" />
     <Content Include="Views\Client\QueueInfo.cshtml" />
     <Content Include="Views\Shared\ChatRoom.cshtml" />
+    <Content Include="Views\Admin\QueryPartial.cshtml" />
+    <Content Include="Views\Admin\ExpertsPartial.cshtml" />
+    <Content Include="Views\Admin\EditQuery.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
